[gd_scene load_steps=8 format=3 uid="uid://dvq410jrv1uxu"]

[ext_resource type="Script" uid="uid://bjvlcg8prhymc" path="res://scripts/menu.gd" id="1_6b72x"]
[ext_resource type="Texture2D" uid="uid://dq2h38bwyyxhj" path="res://sprites/poke-ball.png" id="2_0vcwn"]
[ext_resource type="Texture2D" uid="uid://r7vbtjl6jqwy" path="res://assets/bg.png" id="2_6b72x"]
[ext_resource type="FontFile" uid="uid://b2r02ranjx5vy" path="res://fonts/Tiny5-Regular.ttf" id="2_6flog"]
[ext_resource type="Texture2D" path="res://sprites/pokemon/front/152.png" id="5_la406"]
[ext_resource type="Texture2D" path="res://sprites/pokemon/front/129.png" id="6_ee7ou"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6flog"]
texture = ExtResource("2_6b72x")

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6b72x")

[node name="Bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6flog")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -834.0
offset_top = 166.0
offset_right = -3.0
offset_bottom = 292.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_6flog")
theme_override_font_sizes/font_size = 101
text = "Infinity      League"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectStarter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -383.0
offset_top = 168.0
offset_right = -71.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6flog")
theme_override_font_sizes/font_size = 51
text = "Select Starter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarterPreview" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -575.0
offset_top = -408.0
offset_right = -219.0
offset_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_la406")

[node name="StarterName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -459.0
offset_top = -153.0
offset_right = -339.0
offset_bottom = -117.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6flog")
theme_override_font_sizes/font_size = 31
text = "Chikorita"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChikoritaContainer" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 128.0
offset_top = 371.0
offset_right = 263.0
offset_bottom = 506.0
size_flags_horizontal = 3

[node name="Chikorita" type="TextureButton" parent="ChikoritaContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_0vcwn")
stretch_mode = 4
flip_h = true

[node name="CyndaquilContainer" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 283.0
offset_top = 371.0
offset_right = 419.0
offset_bottom = 506.0
size_flags_horizontal = 3

[node name="Cyndaquil" type="TextureButton" parent="CyndaquilContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_0vcwn")
stretch_mode = 4
flip_h = true

[node name="TotodileContainer" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 439.0
offset_top = 371.0
offset_right = 575.0
offset_bottom = 506.0
size_flags_horizontal = 3

[node name="Totodile" type="TextureButton" parent="TotodileContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_0vcwn")
stretch_mode = 4

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -223.0
offset_right = -89.0
offset_bottom = -168.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.462745, 0.627451, 0.964706, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.976471, 0.976471, 0.0235294, 1)
theme_override_fonts/font = ExtResource("2_6flog")
theme_override_font_sizes/font_size = 41
text = "START"
flat = true

[node name="RandomPokemon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -538.0
offset_top = 109.0
offset_right = -318.0
offset_bottom = 329.0
grow_horizontal = 0
texture = ExtResource("6_ee7ou")
expand_mode = 2
stretch_mode = 6

[connection signal="button_down" from="ChikoritaContainer/Chikorita" to="." method="_on_chikorita_pressed"]
[connection signal="button_down" from="CyndaquilContainer/Cyndaquil" to="." method="_on_cyndaquil_pressed"]
[connection signal="button_down" from="TotodileContainer/Totodile" to="." method="_on_totodile_pressed"]
[connection signal="button_up" from="StartButton" to="." method="_on_start_button_clicked"]
